@@ -108,7 +108,7 @@
     </description>
   </extension>
 </addon>
-<addon id="plugin.video.ivysilani" name="iVysílání — Česká televize" version="1.2.5" provider-name="Štěpán Ort">
+<addon id="plugin.video.ivysilani" name="iVysílání — Česká televize" version="1.2.6" provider-name="Štěpán Ort">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
   </requires>
