@@ -1,4 +1,6 @@
-2015-01.10 [1.2.5]
+2015-01-22 [1.2.6]
+ * Token error detection bugfix by mx3L. Thx
+2015-01-10 [1.2.5]
  * Unsupported skin bugfix by Libor Zoubek. Thx
 2015-01-04 [1.2.4]
  * Player overridden to unpause on start and seek (experimental)
